@@ -1,3 +1,8 @@
+2010-05-04  Andrew Haley  <aph@redhat.com>
+
+	* lib/gen-classlist.sh.in: Use absolute pathnames for all the
+	directory names in the output file.
+
 2010-04-27  Andrew Haley  <aph@redhat.com>
 
 	* java/util/concurrent/CopyOnWriteArrayList.java: Fix for empty
